5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4160/executions/1593_1801.log
== TEST (2019-03-25 20:23:35) 
-- CODE:
abra + nome
nome = input((" Digite a palavra do feitico: "))
repeticoes = int(input(" Numero de repeticoes: "))
 
print (nome)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    abra + nome
NameError: name 'abra' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:23:45) 
-- CODE:

nome = input((" Digite a palavra do feitico: "))
repeticoes = int(input(" Numero de repeticoes: "))
 
print (nome)
-- OUTPUT:
Digite a palavra do feitico: livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:51:32) 
-- CODE:
Abra = 
nome = input((" Digite a palavra do feitico: "))
repeticoes = int(input(" Numero de repeticoes: "))
b = (" Abra " + nome) * repeticoes
print (nome )
-- ERROR:
File "XXXX", line 1
    Abra = 
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:51:44) 
-- CODE:

nome = input((" Digite a palavra do feitico: "))
repeticoes = int(input(" Numero de repeticoes: "))
b = (" Abra " + nome) * repeticoes
print (b)
-- OUTPUT:
Digite a palavra do feitico:  Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:52:18) 
-- CODE:

nome = input((" Digite a palavra do feitico: "))
repeticoes = int(input(" Numero de repeticoes: "))
b = (" Abra " + nome) * repeticoes
print (b)
-- EXECUTION TIME:
0.143646
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Digite a palavra do feitico:  Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Digite a palavra do feitico:  Abra carro Abra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Digite a palavra do feitico:  Abra caixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:52:29) 
-- CODE:

nome = input((" Digite a palavra do feitico: "))
repeticoes = int(input(" Numero de repeticoes: "))
b = (" Abra " + nome) * repeticoes
print (b)
-- EXECUTION TIME:
0.154268
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Digite a palavra do feitico:  Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Digite a palavra do feitico:  Abra carro Abra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Digite a palavra do feitico:  Abra caixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:52:41) 
-- CODE:

nome = input((" Digite a palavra do feitico: "))
repeticoes = int(input(" Numero de repeticoes: "))
b = (" Abra " + nome) * repeticoes
print (b)
-- OUTPUT:
Digite a palavra do feitico:  Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:53:16) 
-- CODE:

nome = input((" Digite a palavra do feitico: "))
repeticoes = int(input(" Numero de repeticoes: "))
b = (" Abra " + nome) * repeticoes
print (b)
-- OUTPUT:
Digite a palavra do feitico:  Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:53:27) 
-- CODE:

nome = input((" Digite a palavra do feitico: "))
repeticoes = int(input(" Numero de repeticoes: "))
b = (" Abra " + nome) * repeticoes
print (b)
-- OUTPUT:
Digite a palavra do feitico:  Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:53:35) 
-- CODE:

nome = input((" Digite a palavra do feitico: "))
repeticoes = int(input(" Numero de repeticoes: "))
b = (" Abra " + nome) * repeticoes
print (b)
-- EXECUTION TIME:
0.247778
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Digite a palavra do feitico:  Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Digite a palavra do feitico:  Abra carro Abra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Digite a palavra do feitico:  Abra caixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:53:39) 
-- CODE:

nome = input((" Digite a palavra do feitico: "))
repeticoes = int(input(" Numero de repeticoes: "))
b = (" Abra " + nome) * repeticoes
print (b)
-- EXECUTION TIME:
0.266381
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Digite a palavra do feitico:  Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Digite a palavra do feitico:  Abra carro Abra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Digite a palavra do feitico:  Abra caixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:53:41) 
-- CODE:

nome = input((" Digite a palavra do feitico: "))
repeticoes = int(input(" Numero de repeticoes: "))
b = (" Abra " + nome) * repeticoes
print (b)
-- OUTPUT:
Digite a palavra do feitico:  Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:54:16) 
-- CODE:

nome = input((" Digite a palavra do feitico: "))
repeticoes = int(input(" Numero de repeticoes: "))
b = (" Abra " + nome) * repeticoes
c = b * repeticoes
print (c)
-- OUTPUT:
Digite a palavra do feitico:  Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:54:33) 
-- CODE:

nome = input((" Digite a palavra do feitico: "))
repeticoes = int(input(" Numero de repeticoes: "))
b = (" Abra " + nome) 
c = b * repeticoes
print (c)
-- OUTPUT:
Digite a palavra do feitico:  Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:54:40) 
-- CODE:

nome = input((" Digite a palavra do feitico: "))
repeticoes = int(input(" Numero de repeticoes: "))
b = (" Abra " + nome) 
c = b * repeticoes
print (c)
-- EXECUTION TIME:
0.197304
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Digite a palavra do feitico:  Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Digite a palavra do feitico:  Abra carro Abra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Digite a palavra do feitico:  Abra caixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:55:02) 
-- CODE:

nome = input((" Digite a palavra do feitico: "))
repeticoes = int(input(" Numero de repeticoes: "))
b =  " Abra " + nome 
c = b * repeticoes
print (c)
-- OUTPUT:
Digite a palavra do feitico:  Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:55:15) 
-- CODE:

nome = input((" Digite a palavra do feitico: "))
repeticoes = int(input(" Numero de repeticoes: "))
b =  " Abra " + nome 
c = b * repeticoes
print (c)
-- EXECUTION TIME:
0.167537
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Digite a palavra do feitico:  Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Digite a palavra do feitico:  Abra carro Abra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Digite a palavra do feitico:  Abra caixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:55:24) 
-- CODE:

nome = input(" Digite a palavra do feitico: ")
repeticoes = int(input(" Numero de repeticoes: "))
b =  " Abra " + nome 
c = b * repeticoes
print (c)
-- EXECUTION TIME:
0.130925
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra carro Abra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra caixa
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 19:14:42) 
-- CODE:
nome = input(" Digite a palavra do feitico: ")
repeticoes = int(input(" Numero de repeticoes: "))
b =  " Abra " + nome 
c = b * repeticoes
print (c)
-- EXECUTION TIME:
0.150763
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra carro Abra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra caixa
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 22:52:51) 
-- CODE:
nome = input(" Digite a palavra do feitico: ")
repeticoes = int(input(" Numero de repeticoes: "))
b =  " Abra " + nome 
c = b * repeticoes
print (c)
-- OUTPUT:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 22:56:47) 
-- CODE:
nome = input(" Digite o nome do objeto: ")
repeticoes = float(input(" Digite o numero de repeticoes: "))
feitico =  " Abra " + nome
print(feitico * repeticoes)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(feitico * repeticoes)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 22:57:42) 
-- CODE:
nome = input(" Digite o nome do objeto: ")
repeticoes = float(input(" Digite o numero de repeticoes: "))
feitico =  " Abra " + nome
a = feitico * repeticoes
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    a = feitico * repeticoes
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 22:58:14) 
-- CODE:
nome = input(" Digite o nome do objeto: ")
repeticoes = int(input(" Digite o numero de repeticoes: "))
feitico =  " Abra " + nome
a = feitico * repeticoes
print(a)
-- OUTPUT:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 22:58:34) 
-- CODE:
nome = input(" Digite o nome do objeto: ")
repeticoes = int(input(" Digite o numero de repeticoes: "))
feitico =  " Abra " + nome
a = feitico * repeticoes
print(a)
-- EXECUTION TIME:
0.192727
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra carro Abra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra caixa
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
